Fixed issue where banner covered nav bar on mobile

--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -2446,6 +2446,8 @@ img::-moz-selection { color: #fff; background: transparent; }
 
 .wave-divider svg { display: block; }
 
+.less-fixed-top { right: 0; left: 0; z-index: 1032; }
+
 .btn { font-size: 14px; font-weight: 800; padding: 15px 25px; letter-spacing: 1px; text-transform: uppercase; border-radius: 0; font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
 
 .btn-primary { background-color: #663399; border-color: #663399; }
